Removed uneeded LeftTuple impl